ajout pages front pour tout les tabs + login/register (que du visuel manque la connexion au backend pour la fonctionnalite

--- a/srcs/frontend/data/src/pages/home.html
+++ b/srcs/frontend/data/src/pages/home.html
@@ -36,11 +36,11 @@
     <!-- Quick Stats -->
     <div class="grid grid-cols-4 gap-4 mt-6">
       <div class="stat-card">
-        <div class="stat-value text-blue-400">0</div>
+        <div class="stat-value text-blue-400">-</div>
         <div class="stat-label">Parties jouées</div>
       </div>
       <div class="stat-card">
-        <div class="stat-value text-emerald-400">0%</div>
+        <div class="stat-value text-emerald-400">-</div>
         <div class="stat-label">Victoires</div>
       </div>
       <div class="stat-card">
@@ -48,7 +48,7 @@
         <div class="stat-label">Classement</div>
       </div>
       <div class="stat-card">
-        <div class="stat-value text-purple-400">0</div>
+        <div class="stat-value text-purple-400">-</div>
         <div class="stat-label">Tournois gagnés</div>
       </div>
     </div>
