--- a/srcs/frontend/data/src/pages/friends.html
+++ b/srcs/frontend/data/src/pages/friends.html
@@ -36,7 +36,7 @@
 
         <!-- Search Results -->
         <div id="search-results" class="hidden">
-          <h4 class="text-sm font-semibold text-neutral-400 mb-3">Résultats de recherche</h4>
+          <h4 class="text-sm font-semibold text-neutral-400 mb-3">Sur ce serveur</h4>
           <div id="search-results-list" class="space-y-2">
             <!-- Search results will be populated here -->
           </div>
