ajout contraste eleve et deux langues (FR et EN) pour scale, si flemme je peux le faire a votre place (fin c'est un prompt), mais en gros suffit d'ajouter data-i18n=cle et ensuite ajouter cette cle aux traduction dans le i18n.ts bref regardez le code c'est plutot simple

--- a/srcs/frontend/data/src/index.html
+++ b/srcs/frontend/data/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ft_transcendance</title>
+  <title data-i18n="app.title">ft_transcendance</title>
   
   <!-- Vite will process these imports -->
   <link rel="stylesheet" href="/styles/input.css" />
