--- a/srcs/frontend/data/src/pages/friends.html
+++ b/srcs/frontend/data/src/pages/friends.html
@@ -6,22 +6,22 @@
     <div class="mb-8">
       <div class="flex items-center gap-3 mb-4">
         <span class="text-4xl">👥</span>
-        <h1 class="text-3xl font-bold">Mes Amis</h1>
+        <h1 class="text-3xl font-bold" data-i18n="friends.title">Mes Amis</h1>
       </div>
-      <p class="text-neutral-400">Gérez vos amis et consultez leur profil</p>
+      <p class="text-neutral-400" data-i18n="friends.subtitle">Gérez vos amis et consultez leur profil</p>
     </div>
 
     <!-- Friends List -->
     <div class="card">
       <div class="card-header">
-        <h3 class="text-lg font-bold">Liste des amis</h3>
+        <h3 class="text-lg font-bold" data-i18n="friends.list_title">Liste des amis</h3>
       </div>
       <div class="card-body">
         <div class="space-y-4">
           <!-- Empty State -->
           <div class="text-center py-12 text-neutral-500">
-            <p class="text-lg mb-2">Vous n'avez pas encore d'amis</p>
-            <p class="text-sm">Invitez d'autres joueurs pour commencer à construire votre réseau !</p>
+            <p class="text-lg mb-2" data-i18n="friends.empty_title">Vous n'avez pas encore d'amis</p>
+            <p class="text-sm" data-i18n="friends.empty_subtitle">Invitez d'autres joueurs pour commencer à construire votre réseau !</p>
           </div>
         </div>
       </div>
@@ -30,14 +30,14 @@
     <!-- Blocked Users -->
     <div class="card mt-8">
       <div class="card-header">
-        <h3 class="text-lg font-bold">Utilisateurs bloqués</h3>
+        <h3 class="text-lg font-bold" data-i18n="friends.blocked_title">Utilisateurs bloqués</h3>
       </div>
       <div class="card-body">
         <div class="space-y-4">
           <!-- Empty State -->
           <div class="text-center py-12 text-neutral-500">
-            <p class="text-lg mb-2">Aucun utilisateur bloqué</p>
-            <p class="text-sm">Les utilisateurs bloqués apparaîtront ici</p>
+            <p class="text-lg mb-2" data-i18n="friends.blocked_empty_title">Aucun utilisateur bloqué</p>
+            <p class="text-sm" data-i18n="friends.blocked_empty_subtitle">Les utilisateurs bloqués apparaîtront ici</p>
           </div>
         </div>
       </div>
