--- a/srcs/frontend/data/src/pages/intro.html
+++ b/srcs/frontend/data/src/pages/intro.html
@@ -12,9 +12,9 @@
     </div>
   </div>
   <div class="title-anim opacity-0 absolute bottom-1/3 text-center">
-    <h1 class="text-5xl font-bold bg-gradient-to-r from-blue-400 via-white to-rose-400 bg-clip-text text-transparent">
+    <h1 class="text-5xl font-bold bg-gradient-to-r from-blue-400 via-white to-rose-400 bg-clip-text text-transparent" data-i18n="app.title">
       ft_transcendance
     </h1>
-    <p class="text-neutral-500 mt-2">Le Pong nouvelle génération</p>
+    <p class="text-neutral-500 mt-2" data-i18n="intro.tagline">Le Pong nouvelle génération</p>
   </div>
 </div>
