--- a/srcs/frontend/data/src/pages/chat.html
+++ b/srcs/frontend/data/src/pages/chat.html
@@ -10,13 +10,13 @@
         <h2 class="text-lg font-semibold mb-3">Conversations</h2>
         <input
           type="text"
-          placeholder="Chercher..."
-          class="w-full px-3 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
+          placeholder="Search..."
+          class="channel-search-input w-full px-3 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
         >
       </div>
 
       <!-- Conversations List -->
-      <div class="flex-1 overflow-y-auto space-y-2 p-2">
+      <div class="channels-list flex-1 overflow-y-auto space-y-2 p-2">
         <!-- Empty State -->
         <div class="p-8 text-center text-neutral-500 text-sm">
           <p>Aucune conversation</p>
@@ -47,7 +47,7 @@
       </div>
 
       <!-- Messages -->
-      <div class="chat-messages flex-1 overflow-y-auto p-4 space-y-4">
+      <div class="channel-messages flex-1 overflow-y-auto p-4 space-y-4">
         <!-- Welcome Message -->
         <div class="text-center text-neutral-500 text-sm py-8">
           <p class="mb-2">💬 Sélectionnez une conversation pour commencer</p>
