--- a/srcs/frontend/data/src/pages/chat.html
+++ b/srcs/frontend/data/src/pages/chat.html
@@ -10,13 +10,14 @@
         <h2 class="text-lg font-semibold mb-3">Conversations</h2>
         <input
           type="text"
+          id="channel-search-input"
           placeholder="Search..."
           class="channel-search-input w-full px-3 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
         >
       </div>
 
       <!-- Conversations List -->
-      <div class="channels-list flex-1 overflow-y-auto space-y-2 p-2">
+      <div id="channels-list" class="channels-list flex-1 overflow-y-auto space-y-2 p-2">
         <!-- Empty State -->
         <div class="p-8 text-center text-neutral-500 text-sm">
           <p>Aucune conversation</p>
@@ -30,24 +31,24 @@
       <!-- Chat Header -->
       <div class="chat-header p-4 border-b border-neutral-800 flex items-center justify-between">
         <div class="flex items-center gap-3">
-          <span class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-full flex items-center justify-center text-sm font-bold">-</span>
+          <span id="chat-header-avatar" class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-full flex items-center justify-center text-sm font-bold">-</span>
           <div>
-            <p class="font-semibold">Sélectionnez une conversation</p>
-            <p class="text-xs text-neutral-400">-</p>
+            <p id="chat-header-name" class="font-semibold">Sélectionnez une conversation</p>
+            <p id="chat-header-status" class="text-xs text-neutral-400">-</p>
           </div>
         </div>
-        <div class="flex items-center gap-2">
+        <div id="chat-header-actions" class="flex items-center gap-2" style="display: none;">
           <button class="btn btn-outline text-sm" title="Voir le profil">
             <span>👤</span>
           </button>
-          <button class="btn btn-outline text-sm" title="Inviter à jouer">
+          <button id="game-invite-btn" class="btn btn-outline text-sm" title="Inviter à jouer">
             <span>🎮</span>
           </button>
         </div>
       </div>
 
       <!-- Messages -->
-      <div class="channel-messages flex-1 overflow-y-auto p-4 space-y-4">
+      <div id="channel-messages" class="channel-messages flex-1 overflow-y-auto p-4 space-y-4">
         <!-- Welcome Message -->
         <div class="text-center text-neutral-500 text-sm py-8">
           <p class="mb-2">💬 Sélectionnez une conversation pour commencer</p>
@@ -56,7 +57,7 @@
       </div>
 
       <!-- Message Input -->
-      <div class="p-4 border-t border-neutral-800">
+      <div id="message-input-container" class="p-4 border-t border-neutral-800">
         <div class="flex gap-2">
           <input 
             type="text" 
