Onpeut a peut pres s'envoyer des messages

--- a/srcs/frontend/data/src/pages/chat.html
+++ b/srcs/frontend/data/src/pages/chat.html
@@ -1,6 +1,6 @@
 <!-- Chat Page -->
 <main class="flex-1 flex items-center justify-center p-8">
-  <div class="w-full max-w-6xl h-full flex gap-6">
+  <div class="w-full max-w-6xl flex gap-6" style="height: calc(100vh - 80px);">
     
     <!-- Conversations List -->
     <div class="w-80 flex flex-col bg-neutral-900 rounded-lg border border-neutral-800">
