--- a/srcs/frontend/data/src/pages/social_hub.html
+++ b/srcs/frontend/data/src/pages/social_hub.html
@@ -93,7 +93,7 @@
               placeholder="Search users..."
               class="flex-1 px-3 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
             >
-            <button id="search-users-btn" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition text-sm" type="button">
+            <button id="user-search-btn" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition text-sm" type="button">
               <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
               </svg>
