message updates  et blocked users ok

--- a/srcs/frontend/data/src/pages/social_hub.html
+++ b/srcs/frontend/data/src/pages/social_hub.html
@@ -1,6 +1,6 @@
 <!-- Social Page (Friends + Chat) -->
-<main class="flex-1 flex items-center justify-center p-8">
-  <div class="w-full max-w-7xl flex gap-6" style="height: calc(100vh - 80px);">
+<main class="flex-1 flex items-center justify-center p-4">
+  <div class="w-full max-w-7xl flex gap-4" style="height: calc(100vh - 200px); max-height: 600px;">
 
     <!-- Left Sidebar (Conversations) -->
     <div class="w-80 flex flex-col bg-neutral-900 rounded-lg border border-neutral-800 min-h-0">
@@ -43,6 +43,9 @@
           </button>
           <button id="game-invite-btn" class="btn btn-outline text-sm" title="Invite to play">
             <span>🎮</span>
+          </button>
+          <button id="block-user-btn" class="btn btn-outline text-sm text-red-500 hover:bg-red-500 hover:text-white" title="Block user">
+            <span>🚫</span>
           </button>
         </div>
       </div>
