--- a/srcs/frontend/data/src/pages/social_hub.html
+++ b/srcs/frontend/data/src/pages/social_hub.html
@@ -6,11 +6,12 @@
     <div class="w-80 flex flex-col bg-neutral-900 rounded-lg border border-neutral-800 min-h-0">
       <!-- Conversations Header -->
       <div class="p-4 border-b border-neutral-800">
-        <h2 class="text-lg font-semibold mb-3">💬 Conversations</h2>
+        <h2 class="text-lg font-semibold mb-3">💬 <span data-i18n="chat.conversations">Conversations</span></h2>
         <input
           type="text"
           id="channel-search-input"
-          placeholder="Search conversations..."
+          data-i18n-placeholder="chat.search_conversations"
+          placeholder="Rechercher des conversations..."
           class="w-full px-3 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
         >
       </div>
@@ -19,8 +20,8 @@
       <div id="channels-list" class="flex-1 overflow-y-auto space-y-2 p-2 min-h-0">
         <!-- Channels will be populated here -->
         <div class="p-8 text-center text-neutral-500 text-sm">
-          <p>No conversations</p>
-          <p class="text-xs mt-1">Start chatting with a friend!</p>
+          <p data-i18n="chat.no_conversations">Aucune conversation</p>
+          <p class="text-xs mt-1" data-i18n="chat.start_chatting">Commencez à discuter avec un ami !</p>
         </div>
       </div>
     </div>
@@ -33,7 +34,7 @@
         <div class="flex items-center gap-3 min-w-0">
           <span id="chat-header-avatar" class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-full flex items-center justify-center text-sm font-bold flex-shrink-0">-</span>
           <div class="min-w-0">
-            <p id="chat-header-name" class="font-semibold truncate">Select a conversation</p>
+            <p id="chat-header-name" class="font-semibold truncate" data-i18n="chat.select_conversation">Sélectionnez une conversation</p>
             <p id="chat-header-status" class="text-xs text-neutral-400">-</p>
           </div>
         </div>
@@ -45,8 +46,8 @@
       <div id="channel-messages" class="flex-1 overflow-y-auto p-4 space-y-4 min-h-0">
         <!-- Welcome Message -->
         <div class="text-center text-neutral-500 text-sm py-8">
-          <p class="mb-2">💬 Select a conversation to start</p>
-          <p class="text-xs">Or search for a friend to chat with!</p>
+          <p class="mb-2" data-i18n="chat.select_to_start">💬 Sélectionnez une conversation pour commencer</p>
+          <p class="text-xs" data-i18n="chat.search_friend">Ou cherchez un ami pour discuter !</p>
         </div>
       </div>
 
@@ -55,7 +56,8 @@
         <div class="flex gap-2">
           <input
             type="text"
-            placeholder="Type a message..."
+            data-i18n-placeholder="chat.type_message"
+            placeholder="Tapez un message..."
             class="flex-1 px-4 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
             disabled
           >
@@ -70,7 +72,7 @@
     <div class="w-80 flex flex-col bg-neutral-900 rounded-lg border border-neutral-800">
       <!-- Friends Header -->
       <div class="p-4 border-b border-neutral-800 flex items-center justify-between cursor-pointer" id="friends-section-header">
-        <h2 class="text-lg font-semibold">👥 Friends</h2>
+        <h2 class="text-lg font-semibold">👥 <span data-i18n="friends.my_friends">Mes amis</span></h2>
         <svg class="w-5 h-5 transform transition-transform" id="friends-chevron" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
         </svg>
@@ -84,7 +86,8 @@
             <input
               type="text"
               id="user-search-input"
-              placeholder="Search users..."
+              data-i18n-placeholder="chat.search_users"
+              placeholder="Chercher des utilisateurs..."
               class="flex-1 px-3 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
             >
             <button id="user-search-btn" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition text-sm" type="button">
@@ -98,7 +101,7 @@
         <!-- Search Results -->
         <div id="search-results" class="hidden border-b border-neutral-800">
           <div class="p-2 bg-neutral-850">
-            <p class="text-xs font-semibold text-neutral-400 px-2 mb-2">SEARCH RESULTS</p>
+            <p class="text-xs font-semibold text-neutral-400 px-2 mb-2" data-i18n="chat.search_results">RÉSULTATS DE RECHERCHE</p>
             <div id="search-results-list" class="space-y-1 max-h-64 overflow-y-auto">
               <!-- Search results will be populated here -->
             </div>
@@ -112,8 +115,8 @@
             <div id="friends-list" class="space-y-1">
               <!-- Friends will be populated here -->
               <div id="friends-empty-state" class="text-center py-8 text-neutral-500 text-sm">
-                <p>No friends yet</p>
-                <p class="text-xs mt-1">Search users to add friends!</p>
+                <p data-i18n="friends.no_friends">Pas encore d'amis</p>
+                <p class="text-xs mt-1" data-i18n="friends.search_to_add">Cherchez des utilisateurs pour en ajouter !</p>
               </div>
             </div>
           </div>
