manque surement encore des traductions que j'ai pas trouve

--- a/srcs/frontend/data/src/index.html
+++ b/srcs/frontend/data/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title data-i18n="app.title">ft_transcendance</title>
-  
+  <title data-i18n="app.title">ft_transcendence</title>
+
   <!-- Vite will process these imports -->
   <link rel="stylesheet" href="/styles/input.css" />
   <link rel="stylesheet" href="/css/animations.css" />
