--- a/srcs/frontend/data/src/pages/social_hub.html
+++ b/srcs/frontend/data/src/pages/social_hub.html
@@ -111,7 +111,7 @@
         <!-- Friends List -->
         <div class="flex-1 overflow-y-auto min-h-0">
           <div class="p-2">
-            <p class="text-xs font-semibold text-neutral-400 px-2 mb-2">MY FRIENDS (<span id="friends-count">0</span>)</p>
+            <p class="text-xs font-semibold text-neutral-400 px-2 mb-2"><span id="friends-title-with-count" data-i18n="friends.title_with_count">MY FRIENDS (0 friends)</span></p>
             <div id="friends-list" class="space-y-1">
               <!-- Friends will be populated here -->
               <div id="friends-empty-state" class="text-center py-8 text-neutral-500 text-sm">
