--- a/srcs/frontend/data/src/pages/home.html
+++ b/srcs/frontend/data/src/pages/home.html
@@ -1,23 +1,21 @@
 <!-- Home Page -->
-<main id="main-content" class="flex-1 flex items-center justify-center p-8" role="main" aria-labelledby="home-title">
-  <div class="w-full max-w-5xl">
+<main id="main-content" class="flex-1 px-6 py-10 flex items-center justify-center" role="main" aria-labelledby="home-title">
+  <div class="w-full max-w-6xl">
 
     <!-- Game Container -->
-    <div class="card shadow-2xl">
+    <div class="card mb-6">
 
       <!-- Game Header -->
       <div class="card-header flex items-center justify-between">
-        <div class="flex items-center gap-4">
-          <span class="text-2xl" aria-hidden="true">🎮</span>
-          <h1 id="home-title" class="text-xl font-bold" data-i18n="home.game_title">Pong Arena</h1>
-        </div>
-        <div id="online-status" class="flex items-center gap-3 hidden" role="status" aria-live="polite">
-          <span class="badge badge-success" data-i18n="home.status_online">En ligne</span>
-          <span class="text-neutral-400" aria-hidden="true">|</span>
-          <span id="pvp-queue-count" class="text-neutral-400">0 <span data-i18n="home.players_waiting">en attente</span></span>
-        </div>
-        <div id="offline-status" class="flex items-center gap-3" role="status">
-          <span class="badge badge-neutral" data-i18n="home.status_offline">Hors-ligne</span>
+        <h1 id="home-title" class="section-title bg-gradient-to-r from-blue-400 via-white to-rose-400 bg-clip-text text-transparent" data-i18n="home.game_title">Pong Arena</h1>
+        <div class="flex items-center gap-3">
+          <div id="online-status" class="hidden" role="status" aria-live="polite">
+            <span class="badge badge-success" data-i18n="home.status_online">En ligne</span>
+            <span class="text-secondary text-sm ml-2"><span id="pvp-queue-count">0</span> <span data-i18n="home.players_waiting">en attente</span></span>
+          </div>
+          <div id="offline-status" role="status">
+            <span class="badge badge-neutral" data-i18n="home.status_offline">Hors-ligne</span>
+          </div>
         </div>
       </div>
 
@@ -25,44 +23,71 @@
       <div id="game-container" class="relative bg-neutral-950 aspect-video" role="application" aria-label="Zone de jeu Pong"></div>
 
       <!-- Game Footer -->
-      <div class="card-footer flex items-center justify-between">
-        <div class="flex items-center gap-6 text-sm text-neutral-400" aria-label="Contrôles du jeu">
-          <span data-i18n="home.controls_move">W/S ou ↑/↓ - Déplacer</span>
-          <span data-i18n="home.controls_start">ESPACE - Démarrer</span>
-          <span data-i18n="home.controls_pause">ÉCHAP - Pause</span>
-        </div>
-        <div class="flex items-center gap-2" role="group" aria-label="Modes de jeu">
-          <div class="relative">
-            <button id="btn-solo" class="btn btn-outline text-sm" data-i18n="home.btn_solo" aria-haspopup="menu" aria-expanded="false">Solo</button>
-            <div id="solo-difficulty-menu" class="absolute bottom-full left-0 mb-1 hidden bg-neutral-800 rounded-lg shadow-lg border border-neutral-700 overflow-hidden z-10" role="menu" aria-label="Difficulté">
-              <button id="btn-diff-beginner" class="block w-full px-4 py-2 text-sm text-left hover:bg-neutral-700 text-emerald-400" data-i18n="home.difficulty_easy" role="menuitem">Facile</button>
-              <button id="btn-diff-normal" class="block w-full px-4 py-2 text-sm text-left hover:bg-neutral-700 text-amber-400" data-i18n="home.difficulty_normal" role="menuitem">Normal</button>
-              <button id="btn-diff-hard" class="block w-full px-4 py-2 text-sm text-left hover:bg-neutral-700 text-red-400" data-i18n="home.difficulty_hard" role="menuitem">Difficile</button>
+      <div class="card-footer">
+        <div class="game-controls-wrapper">
+          <!-- Game Mode Selection -->
+          <div class="segmented-control" role="group" aria-label="Modes de jeu">
+            <div class="relative">
+              <button id="btn-solo" class="segmented-option" data-i18n="home.btn_solo" aria-haspopup="menu" aria-expanded="false">Solo</button>
+              <div id="solo-difficulty-menu" class="absolute bottom-full left-0 mb-2 hidden bg-neutral-800 rounded-lg shadow-lg border border-neutral-700 overflow-hidden z-10 min-w-[140px]" role="menu" aria-label="Difficulté">
+                <button id="btn-diff-beginner" class="block w-full px-4 py-2 text-sm text-left hover:bg-neutral-700 transition text-secondary hover:text-primary" data-i18n="home.difficulty_easy" role="menuitem">Facile</button>
+                <button id="btn-diff-normal" class="block w-full px-4 py-2 text-sm text-left hover:bg-neutral-700 transition text-secondary hover:text-primary" data-i18n="home.difficulty_normal" role="menuitem">Normal</button>
+                <button id="btn-diff-hard" class="block w-full px-4 py-2 text-sm text-left hover:bg-neutral-700 transition text-secondary hover:text-primary" data-i18n="home.difficulty_hard" role="menuitem">Difficile</button>
+              </div>
+            </div>
+            <button id="btn-local" class="segmented-option" data-i18n="home.btn_local">PvP Local</button>
+            <button id="btn-pvp" class="segmented-option" data-i18n="home.btn_pvp">PvP Online</button>
+          </div>
+
+          <!-- Keyboard Shortcuts -->
+          <div class="game-shortcuts" aria-label="Contrôles du jeu">
+            <div class="game-shortcuts-item">
+              <kbd class="kbd">W/S</kbd>
+              <span>Déplacer</span>
+            </div>
+            <div class="game-shortcuts-item">
+              <kbd class="kbd">Space</kbd>
+              <span>Démarrer</span>
+            </div>
+            <div class="game-shortcuts-item">
+              <kbd class="kbd">Esc</kbd>
+              <span>Pause</span>
             </div>
           </div>
-          <button id="btn-local" class="btn btn-outline text-sm" data-i18n="home.btn_local">PvP Local</button>
-          <button id="btn-pvp" class="btn btn-outline text-sm" data-i18n="home.btn_pvp">PvP Online</button>
         </div>
       </div>
     </div>
 
     <!-- Quick Stats -->
-    <section class="grid grid-cols-4 gap-4 mt-6" aria-label="Statistiques rapides">
-      <div class="stat-card" role="group" aria-labelledby="stat-games-label">
-        <div class="stat-value text-blue-400" aria-live="polite">-</div>
-        <div id="stat-games-label" class="stat-label" data-i18n="home.stat_games">Parties jouées</div>
+    <section aria-label="Statistiques rapides">
+      <div class="section-header mb-4">
+        <h2 class="section-title text-lg">
+          <span data-i18n="home.quick_stats">Statistiques rapides</span>
+        </h2>
+        <a href="/stats" class="text-sm text-secondary hover:text-primary transition">
+          <span data-i18n="home.view_all">Voir tout</span>
+          <svg class="w-4 h-4 inline ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+          </svg>
+        </a>
       </div>
-      <div class="stat-card" role="group" aria-labelledby="stat-wins-label">
-        <div class="stat-value text-emerald-400" aria-live="polite">-</div>
-        <div id="stat-wins-label" class="stat-label" data-i18n="home.stat_wins">Victoires</div>
-      </div>
-      <div class="stat-card" role="group" aria-labelledby="stat-rank-label">
-        <div class="stat-value text-amber-400" aria-live="polite">-</div>
-        <div id="stat-rank-label" class="stat-label" data-i18n="home.stat_rank">Classement</div>
-      </div>
-      <div class="stat-card" role="group" aria-labelledby="stat-tournaments-label">
-        <div class="stat-value text-purple-400" aria-live="polite">-</div>
-        <div id="stat-tournaments-label" class="stat-label" data-i18n="home.stat_tournaments">Tournois gagnés</div>
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-4" id="home-stats-grid">
+        <div class="stat-card" role="group" aria-labelledby="stat-games-label">
+          <div class="stat-value" id="home-stat-games" aria-live="polite">—</div>
+          <div id="stat-games-label" class="stat-label" data-i18n="home.stat_games">Parties jouées</div>
+        </div>
+        <div class="stat-card" role="group" aria-labelledby="stat-wins-label">
+          <div class="stat-value" id="home-stat-wins" aria-live="polite">—</div>
+          <div id="stat-wins-label" class="stat-label" data-i18n="home.stat_wins">Victoires</div>
+        </div>
+        <div class="stat-card" role="group" aria-labelledby="stat-rank-label">
+          <div class="stat-value" id="home-stat-rank" aria-live="polite">—</div>
+          <div id="stat-rank-label" class="stat-label" data-i18n="home.stat_rank">Classement</div>
+        </div>
+        <div class="stat-card" role="group" aria-labelledby="stat-tournaments-label">
+          <div class="stat-value" id="home-stat-tournaments" aria-live="polite">—</div>
+          <div id="stat-tournaments-label" class="stat-label" data-i18n="home.stat_tournaments">Tournois gagnés</div>
+        </div>
       </div>
     </section>
 
