--- a/srcs/frontend/data/src/pages/social_hub.html
+++ b/srcs/frontend/data/src/pages/social_hub.html
@@ -1,53 +1,62 @@
 <!-- Social Page (Friends + Chat) -->
-<main class="flex-1 flex items-center justify-center p-4">
-  <div class="w-full max-w-7xl flex gap-4" style="height: calc(100vh - 200px); max-height: 600px;">
+<main class="flex-1 flex px-6 py-4">
+  <div class="w-full max-w-7xl mx-auto flex gap-4 social-hub-container">
 
     <!-- Left Sidebar (Conversations) -->
-    <div class="w-80 flex flex-col bg-neutral-900 rounded-lg border border-neutral-800 min-h-0">
+    <div class="flex flex-col bg-neutral-900 rounded-xl border border-neutral-800 min-h-0" style="width: 280px; flex-shrink: 0;">
       <!-- Conversations Header -->
       <div class="p-4 border-b border-neutral-800">
-        <h2 class="text-lg font-semibold mb-3">💬 <span data-i18n="chat.conversations">Conversations</span></h2>
+        <h2 class="text-lg font-semibold mb-3 text-primary" data-i18n="chat.conversations">Conversations</h2>
         <input
           type="text"
           id="channel-search-input"
           data-i18n-placeholder="chat.search_conversations"
-          placeholder="Rechercher des conversations..."
-          class="w-full px-3 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
+          placeholder="Rechercher..."
+          class="input text-sm"
         >
       </div>
 
       <!-- Conversations List -->
-      <div id="channels-list" class="flex-1 overflow-y-auto space-y-2 p-2 min-h-0">
+      <div id="channels-list" class="flex-1 overflow-y-auto p-2 min-h-0">
         <!-- Channels will be populated here -->
-        <div class="p-8 text-center text-neutral-500 text-sm">
-          <p data-i18n="chat.no_conversations">Aucune conversation</p>
-          <p class="text-xs mt-1" data-i18n="chat.start_chatting">Commencez à discuter avec un ami !</p>
+        <div class="empty-state-compact">
+          <svg class="empty-state-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"></path>
+          </svg>
+          <p class="empty-state-title" data-i18n="chat.no_conversations">Aucune conversation</p>
+          <p class="empty-state-text" data-i18n="chat.start_chatting">Vos conversations apparaîtront ici</p>
         </div>
       </div>
     </div>
 
     <!-- Center Chat Area -->
-    <div class="flex-1 flex flex-col bg-neutral-900 rounded-lg border border-neutral-800 min-w-0">
+    <div class="flex-1 flex flex-col bg-neutral-900 rounded-xl border border-neutral-800 min-w-0">
 
       <!-- Chat Header -->
       <div class="chat-header p-4 border-b border-neutral-800 flex items-center justify-between">
         <div class="flex items-center gap-3 min-w-0">
-          <span id="chat-header-avatar" class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-full flex items-center justify-center text-sm font-bold flex-shrink-0">-</span>
+          <span id="chat-header-avatar" class="list-item-avatar flex-shrink-0">—</span>
           <div class="min-w-0">
-            <p id="chat-header-name" class="font-semibold truncate" data-i18n="chat.select_conversation">Sélectionnez une conversation</p>
-            <p id="chat-header-status" class="text-xs text-neutral-400">-</p>
+            <p id="chat-header-name" class="font-semibold truncate text-primary" data-i18n="chat.select_conversation">Sélectionnez une conversation</p>
+            <p id="chat-header-status" class="text-xs text-tertiary">—</p>
           </div>
         </div>
-        <div id="chat-header-actions" class="flex items-center gap-2 flex-shrink-0" style="display: none;">
+        <div id="chat-header-actions" class="flex items-center gap-2 flex-shrink-0 hidden">
         </div>
       </div>
 
       <!-- Messages -->
-      <div id="channel-messages" class="flex-1 overflow-y-auto p-4 space-y-4 min-h-0">
+      <div id="channel-messages" class="flex-1 overflow-y-auto p-4 space-y-4 min-h-0 flex items-center justify-center">
         <!-- Welcome Message -->
-        <div class="text-center text-neutral-500 text-sm py-8">
-          <p class="mb-2" data-i18n="chat.select_to_start">💬 Sélectionnez une conversation pour commencer</p>
-          <p class="text-xs" data-i18n="chat.search_friend">Ou cherchez un ami pour discuter !</p>
+        <div class="empty-state max-w-md">
+          <svg class="empty-state-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
+          </svg>
+          <p class="empty-state-title" data-i18n="chat.select_to_start">Sélectionnez une conversation</p>
+          <p class="empty-state-text" data-i18n="chat.search_friend">Cherchez un ami dans le panneau de droite pour commencer à discuter</p>
+          <button class="btn btn-outline mt-2" onclick="document.getElementById('user-search-input').focus()">
+            Chercher un ami
+          </button>
         </div>
       </div>
 
@@ -58,22 +67,22 @@
             type="text"
             data-i18n-placeholder="chat.type_message"
             placeholder="Tapez un message..."
-            class="flex-1 px-4 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
+            class="input flex-1 text-sm"
             disabled
           >
-          <button class="btn btn-secondary" disabled>
-            <span>📤</span>
+          <button class="btn btn-primary" disabled>
+            <span>Envoyer</span>
           </button>
         </div>
       </div>
     </div>
 
     <!-- Right Sidebar (Friends) -->
-    <div class="w-80 flex flex-col bg-neutral-900 rounded-lg border border-neutral-800">
+    <div class="w-80 flex flex-col bg-neutral-900 rounded-xl border border-neutral-800">
       <!-- Friends Header -->
-      <div class="p-4 border-b border-neutral-800 flex items-center justify-between cursor-pointer" id="friends-section-header">
-        <h2 class="text-lg font-semibold">👥 <span data-i18n="friends.my_friends">Mes amis</span></h2>
-        <svg class="w-5 h-5 transform transition-transform" id="friends-chevron" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <div class="p-4 border-b border-neutral-800 flex items-center justify-between cursor-pointer hover:bg-neutral-800/50 transition" id="friends-section-header">
+        <h2 class="text-lg font-semibold text-primary" data-i18n="friends.my_friends">Mes amis</h2>
+        <svg class="w-5 h-5 transform transition-transform text-secondary" id="friends-chevron" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
         </svg>
       </div>
@@ -88,9 +97,9 @@
               id="user-search-input"
               data-i18n-placeholder="chat.search_users"
               placeholder="Chercher des utilisateurs..."
-              class="flex-1 px-3 py-2 bg-neutral-800 border border-neutral-700 rounded text-sm text-white placeholder-neutral-500 focus:outline-none focus:border-blue-500"
+              class="input flex-1 text-sm"
             >
-            <button id="user-search-btn" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition text-sm" type="button">
+            <button id="user-search-btn" class="btn btn-outline btn-sm" type="button">
               <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
               </svg>
@@ -100,7 +109,7 @@
 
         <!-- Search Results -->
         <div id="search-results" class="hidden border-b border-neutral-800">
-          <div class="p-2 bg-neutral-850">
+          <div class="p-2 bg-neutral-800">
             <p class="text-xs font-semibold text-neutral-400 px-2 mb-2" data-i18n="chat.search_results">RÉSULTATS DE RECHERCHE</p>
             <div id="search-results-list" class="space-y-1 max-h-64 overflow-y-auto">
               <!-- Search results will be populated here -->
@@ -111,12 +120,18 @@
         <!-- Friends List -->
         <div class="flex-1 overflow-y-auto min-h-0">
           <div class="p-2">
-            <p class="text-xs font-semibold text-neutral-400 px-2 mb-2">MY FRIENDS (<span id="friends-count">0</span>)</p>
+            <p class="text-xs font-semibold text-tertiary px-2 mb-2 uppercase tracking-wide">
+              <span data-i18n="friends.my_friends">Mes amis</span>
+              <span class="text-secondary">(<span id="friends-count">0</span>)</span>
+            </p>
             <div id="friends-list" class="space-y-1">
               <!-- Friends will be populated here -->
-              <div id="friends-empty-state" class="text-center py-8 text-neutral-500 text-sm">
-                <p data-i18n="friends.no_friends">Pas encore d'amis</p>
-                <p class="text-xs mt-1" data-i18n="friends.search_to_add">Cherchez des utilisateurs pour en ajouter !</p>
+              <div id="friends-empty-state" class="empty-state-compact">
+                <svg class="empty-state-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"></path>
+                </svg>
+                <p class="empty-state-title" data-i18n="friends.no_friends">Aucun ami</p>
+                <p class="empty-state-text" data-i18n="friends.search_to_add">Cherchez des utilisateurs ci-dessus</p>
               </div>
             </div>
           </div>
@@ -127,26 +142,3 @@
 
   </div>
 </main>
-
-<style>
-  main {
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-  }
-
-  .conversation-item.active {
-    background-color: rgb(30, 41, 59);
-    border-left: 3px solid rgb(59, 130, 246);
-  }
-
-  /* Smooth collapse animation */
-  #friends-section-content.collapsed {
-    max-height: 0 !important;
-    overflow: hidden;
-  }
-
-  #friends-chevron.collapsed {
-    transform: rotate(-90deg);
-  }
-</style>
