Ok on est PAS MAL

--- a/srcs/frontend/data/src/pages/social_hub.html
+++ b/srcs/frontend/data/src/pages/social_hub.html
@@ -1,6 +1,25 @@
 <!-- Social Page (Friends + Chat) -->
 <main class="flex-1 flex px-6 py-4">
-  <div class="w-full max-w-7xl mx-auto flex gap-4 social-hub-container">
+  <div class="w-full max-w-7xl mx-auto">
+
+    <!-- Login Required State (hidden by default) -->
+    <div id="social-login-required" class="hidden">
+      <div class="card mt-8">
+        <div class="card-body p-12 text-center">
+          <svg class="w-20 h-20 mx-auto mb-6 text-neutral-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
+          </svg>
+          <h3 class="text-2xl font-bold text-primary mb-3" data-i18n="social.login_required_title">Connexion requise</h3>
+          <p class="text-neutral-400 mb-6 max-w-md mx-auto" data-i18n="social.login_required_desc">Connectez-vous pour accéder à vos conversations et discuter avec vos amis.</p>
+          <button class="btn btn-primary" data-auth="login">
+            <span data-i18n="nav.login">Se connecter</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Social Content (visible when logged in) -->
+    <div id="social-content" class="flex gap-4 social-hub-container">
 
     <!-- Left Sidebar (Conversations) -->
     <div class="flex flex-col bg-neutral-900 rounded-xl border border-neutral-800 min-h-0" style="width: 280px; flex-shrink: 0;">
@@ -143,6 +162,8 @@
         </div>
       </div>
     </div>
+
+    </div><!-- End social-content -->
 
   </div>
 </main>
