Clean repo full

--- a/srcs/frontend/data/src/index.html
+++ b/srcs/frontend/data/src/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="app.title">ft_transcendance</title>
-  
-  <!-- Vite will process these imports -->
   <link rel="stylesheet" href="/styles/input.css" />
   <link rel="stylesheet" href="/css/animations.css" />
   <link rel="stylesheet" href="/css/components.css" />
@@ -15,7 +13,7 @@
   <!-- App Container -->
   <div id="app"></div>
 
-  <!-- Script - Vite uses type="module" -->
+  <!-- Script -->
   <script type="module" src="/scripts/app.ts"></script>
 </body>
 </html>
